# drinks-touch-analysis

./: .gitignore  README.md  drinks-scanner-analysis  pyproject.toml  requirements.txt
dsgvo/: drinks.csv  drinks_popularity.ipynb  requirements.txt
