[project]
name = "drinks-touch-analysis"
version = "0.0.0"
description = "Loads drinks purchase statistics with according user database and plots it in a meaningful way."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "pandas==2.3.1",
    "psycopg2-binary==2.9.10",
    "requests==2.33.0",
    "seaborn==0.13.2",
    "sshtunnel==0.4.0",
]
